<resources>
    <string name="app_name">LPAccountBook</string>

    <string name="action_input">Input</string>
    <string name="action_settings">Settings</string>
    <string name="action_listview">View</string>
    <string name="action_stackedbarview">Stacked Bar</string>

    <string name="action_alldelete">All Delete</string>
    <string name="action_changesection">Change Section</string>

    <string name="dialog_firsttime_title">ヒント</string>
    <string name="dialog_firsttime_message">「画面右上 メニューキー → Help」\nでヘルプが読めます。</string>

    <string name="settings_title">Settings</string>

</resources>
