<menu xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools" tools:context=".LPAccountBookActivity">
    <item android:id="@+id/action_input" android:title="@string/action_input"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_listview" android:title="@string/action_listview"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_alldelete" android:title="@string/action_alldelete"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_changesection" android:title="@string/action_changesection"
        android:orderInCategory="100" app:showAsAction="never" />
</menu>
